--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "data/Food-Data"]
-	path = data/Food-Data
+[submodule "test/data/Food-Data"]
+	path = test/data/Food-Data
 	url = https://github.com/ZURASTA/Food-Data.git
